seller signup added

--- a/customer/templates/customer/base.html
+++ b/customer/templates/customer/base.html
@@ -9,6 +9,9 @@
 
 <title>GreatKart | One of the Biggest Online Shopping Platform</title>
 
+{% block header %}
+
+{% endblock %}
 <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
 
 <!-- jQuery -->
