--- a/static/css/ui.css
+++ b/static/css/ui.css
@@ -358,6 +358,10 @@ article:after,
   opacity: 0.9;
 }
 
+/* The snackbar styling */
+
+
+
 /* --------------------- titles ---------------------- */
 .section-heading {
   margin-bottom: 20px;
