--- a/eKart_admin/templates/ekart_admin/view_category.html
+++ b/eKart_admin/templates/ekart_admin/view_category.html
@@ -5,7 +5,24 @@
 
 
 <main class="col-md-9">
-   <h1>view_category</h1>
+   <h1>Category List</h1>
+  
+   <div class="row">
+      {% for item in category %}
+       
+        <div class="col-md-3">
+            <div class="card card-product-grid">
+                <a href="{% url 'customer:product_detail' %}" class="img-wrap"> <img src="{{ item.cover_pic.url }}"> </a>
+                <figcaption class="info-wrap">
+                    <p> {{ item.category }}
+                    
+                </figcaption>
+            </div>
+        </div> <!-- col.// -->
+        {% endfor %}
+   </div>
+  
+   
 </main>
 
 
