--- a/customer/templates/customer/includes/navbar.html
+++ b/customer/templates/customer/includes/navbar.html
@@ -60,11 +60,18 @@
         <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
                     <div class="d-flex justify-content-end mb-3 mb-lg-0">
                         <div class="widget-header">
-                            <small class="title text-muted">Welcome guest!</small>
+                            
+                            
+                            {% if not request.session.customer %}
                             <div> 
+                                <small class="title text-muted">Welcome guest!</small>
                                 <a href="{% url 'customer:customer_login' %}">Sign in</a> <span class="dark-transp"> | </span>
                                 <a href="{% url 'customer:customer_signup' %}"> Register</a>
                             </div>
+
+                            {% else %}
+                            <small class="title text-muted">Welcome {{ request.session.customer_name }}!</small>
+                            {% endif %}
                         </div>
                         <a href="{% url 'customer:cart' %}" class="widget-header pl-3 ml-3">
                             <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
