--- a/customer/templates/customer/cart.html
+++ b/customer/templates/customer/cart.html
@@ -8,7 +8,7 @@
         <!-- ============================ COMPONENT 1 ================================= -->
 
         <div class="row">
-            <aside class="col-lg-9">
+            <aside class="col-lg-8">
                 <div class="card">
                     <table class="table table-borderless table-shopping-cart">
                         <thead class="text-muted">
@@ -24,7 +24,7 @@
                             <tr>
                                 <td>
                                     <figure class="itemside align-items-center">
-                                        <div class="aside"><img src="{% static './images/items/11.jpg' %}"
+                                        <div class="aside"><img src="{{ item.product.image.url }}"
                                                 class="img-sm"></div>
                                         <figcaption class="info">
                                             <a href="#" class="title text-dark">{{ item.product.product_name }}</a>
@@ -73,22 +73,19 @@
                 </div> <!-- card.// -->
 
             </aside> <!-- col.// -->
-            <aside class="col-lg-3">
+            <aside class="col-lg-4">
 
                 <div class="card">
                     <div class="card-body">
                         <dl class="dlist-align">
-                            <dt>Total price:</dt>
-                            <dd class="text-right">$69.97</dd>
+                            <dt>Total Items:</dt>
+                            <dd class="text-right">{{ total_items }} No {{ total_items | pluralize}} </dd>
                         </dl>
                         <dl class="dlist-align">
-                            <dt>Tax:</dt>
-                            <dd class="text-right"> $10.00</dd>
+                            <dt>Grand Total</dt>
+                            <dd class="text-right text-dark b">Rs {{ grand_total }}</dd>
                         </dl>
-                        <dl class="dlist-align">
-                            <dt>Total:</dt>
-                            <dd class="text-right text-dark b"><strong>$59.97</strong></dd>
-                        </dl>
+                        
                         <hr>
                         <p class="text-center mb-3">
                             <img src="{% static './images/misc/payments.png' %}" height="26">
