--- a/customer/templates/customer/cart.html
+++ b/customer/templates/customer/cart.html
@@ -5,10 +5,11 @@
 <section class="section-content padding-y bg">
     <div class="container">
 
-        <!-- ============================ COMPONENT 1 ================================= -->
 
         <div class="row">
+
             <aside class="col-lg-8">
+                {% if cart_items %}
                 <div class="card">
                     <table class="table table-borderless table-shopping-cart">
                         <thead class="text-muted">
@@ -24,45 +25,57 @@
                             <tr>
                                 <td>
                                     <figure class="itemside align-items-center">
-                                        <div class="aside"><img src="{{ item.product.image.url }}"
-                                                class="img-sm"></div>
+                                        <div class="aside"><img src="{{ item.product.image.url }}" class="img-sm"></div>
                                         <figcaption class="info">
                                             <a href="#" class="title text-dark">{{ item.product.product_name }}</a>
                                             <p class="text-muted small">Seller: {{item.product.seller.first_name }}</p>
+
                                         </figcaption>
                                     </figure>
                                 </td>
                                 <td>
-                                    <!-- col.// -->
+
                                     <div class="col">
                                         <div class="input-group input-spinner">
                                             <div class="input-group-prepend">
-                                                <button class="btn btn-light" type="button" id="button-plus"> <i
-                                                        class="fa fa-minus"></i> </button>
+                                                <button class="btn btn-light update-cart"
+                                                    data-txtQty="product_qty{{ item.product.id }}"
+                                                    data-itemStock="{{ item.product.stock }}" data-btnType="decrement"
+                                                    data-product_id="{{ item.product.id }}" type="button"> <i
+                                                        class="fa fa-minus"></i>
+                                                </button>
                                             </div>
-                                            <input type="text" class="form-control" value="1">
+
+                                            <input type="text" id="product_qty{{ item.product.id }}"
+                                                class="form-control" value="{{ item.quantity }}">
                                             <div class="input-group-append">
-                                                <button class="btn btn-light" type="button" id="button-minus"> <i
-                                                        class="fa fa-plus"></i> </button>
-                                                        
-                                                        
+                                                <button class="btn btn-light update-cart"
+                                                    data-txtQty="product_qty{{ item.product.id }}"
+                                                    data-itemStock="{{ item.product.stock }}" data-btnType="increment"
+                                                    data-product_id="{{ item.product.id }}" type="button"> <i
+                                                        class="fa fa-plus"></i>
+                                                </button>
+
+
                                             </div>
-                                        </div> <!-- input-group.// -->
+                                        </div>  
                                     </div>
                                     <div>
                                         {% if item.product.stock == 0 %}
                                         <span class="text-danger">Item out of stock</span>
                                         {% endif %}
-                                    </div> <!-- col.// -->
+                                    </div>  
                                 </td>
                                 <td>
                                     <div class="price-wrap">
-                                        <span class="price">  <span class="text-dark">Rs {{item.product.price}}</span></span>
+                                        <span class="price"> <span class="text-dark">Rs
+                                                {{item.product.price}}</span></span>
 
-                                    </div> <!-- price-wrap .// -->
+                                    </div>  
                                 </td>
                                 <td class="text-right">
-                                    <a href="{% url 'customer:remove_cart_item' item.id %}" class="btn btn-danger"> Remove</a>
+                                    <a href="{% url 'customer:remove_cart_item' item.id %}" class="btn btn-danger">
+                                        Remove</a>
                                 </td>
                             </tr>
 
@@ -70,7 +83,10 @@
 
                         </tbody>
                     </table>
-                </div> <!-- card.// -->
+                </div>
+                {% else %}
+                <h3 class="text-danger text-center">Cart Empty</h3>
+                {% endif %}
 
             </aside> <!-- col.// -->
             <aside class="col-lg-4">
@@ -83,31 +99,100 @@
                         </dl>
                         <dl class="dlist-align">
                             <dt>Grand Total</dt>
-                            <dd class="text-right text-dark b">Rs {{ grand_total }}</dd>
+                            <dd class="text-right text-dark b"> Rs <span id="grand_total">{{ grand_total }}</span></dd>
                         </dl>
-                        
+
                         <hr>
                         <p class="text-center mb-3">
                             <img src="{% static './images/misc/payments.png' %}" height="26">
                         </p>
-                       
-                        <button type="submit" class="btn btn-primary btn-block"  {{ disable_checkout }} > Checkout </button>
-                        <a href="{% url 'customer:store' %}" class="btn btn-light btn-block">Continue Shopping</a>
-                    </div> <!-- card-body.// -->
-                </div> <!-- card.// -->
 
-            </aside> <!-- col.// -->
+ 
+
+                            <a href="{% url 'customer:cart' 'review' %}">
+                            <button type="button" name="review_cart" id="rzp-button1" class="btn btn-primary btn-block"
+                                {{ disable_checkout }}>
+                                Place Order </button>
+                            </a>
+                    </div>
+                </div>
+
+            </aside>
 
 
-        </div> <!-- row.// -->
-        <!-- ============================ COMPONENT 1 END .// ================================= -->
+        </div>
 
-    </div> <!-- container .//  -->
+    </div>
 </section>
 
 
-<script>
 
+
+<script>
+    var btnStatus = ''
+    $('.update-cart').click(function () {
+
+
+        let btnType = $(this).attr('data-btnType')
+        let selectedItemTextId = $(this).attr('data-txtQty')
+        let selectedTxt = document.getElementById(selectedItemTextId)
+        let currentTxtValue = parseInt(selectedTxt.value)
+        let currentItemStock = $(this).attr('data-itemStock')
+        let selectedProductId = $(this).attr('data-product_id')
+
+
+        if (btnType == 'increment') {
+            btnStatus = 'increment'
+            if (currentTxtValue < currentItemStock) {
+                var incrementedValue = currentTxtValue + 1
+                selectedTxt.value = incrementedValue
+            }
+
+        }
+
+        if (btnType == 'decrement') {
+            btnStatus = 'decrement'
+            if (currentTxtValue > 0) {
+                var decrementedValue = currentTxtValue - 1
+
+
+                selectedTxt.value = decrementedValue
+
+            }
+
+
+        }
+
+
+        $.ajaxSetup({
+            headers: {
+                "X-CSRFToken": '{{ csrf_token }}'
+            }
+        })
+
+
+        $.ajax({
+            url: "{% url 'customer:update_cart' %}",
+            method: 'POST',
+            data: {
+                id: selectedProductId,
+                qty: selectedTxt.value
+
+            },
+            success: function (response) {
+                 
+                let grandTotal = response.grand_total
+
+                
+                $('#grand_total').html(grandTotal)
+
+
+
+            }
+        })
+
+
+    })
 </script>
 
 {% endblock %}
