--- a/customer/templates/customer/includes/navbar.html
+++ b/customer/templates/customer/includes/navbar.html
@@ -73,7 +73,7 @@
                             <small class="title text-muted">Welcome {{ request.session.customer_name }}!</small>
                             {% endif %}
                         </div>
-                        <a href="{% url 'customer:cart' %}" class="widget-header pl-3 ml-3">
+                        <a href="{% url 'customer:cart' 'list' %}" class="widget-header pl-3 ml-3">
                             <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
                             <span class="badge badge-pill badge-danger notify">0</span>
                         </a>
