--- a/customer/templates/customer/order_complete.html
+++ b/customer/templates/customer/order_complete.html
@@ -29,7 +29,7 @@
                             <!-- col-lg-6 start here -->
                             <div class="invoice-from">
                                 <ul class="list-unstyled text-right">
-                                    <li><strong>Invoiced To</strong></li>
+                                    <li><strong>Invoiced To</strong> {{ order_details.customer.customer_name | title}}</li>
                                     <li>Jakob Smith</li>
                                     <li>Roupark 37</li>
                                     <li>New York, NY, 2014</li>
