--- a/customer/templates/customer/product_detail.html
+++ b/customer/templates/customer/product_detail.html
@@ -30,9 +30,7 @@
 
 
                         <hr>
-                        <label for="">Quantity</label>
-                        <input type="number" name="quantity" min="1" max="{{ product.stock }}" value="1"
-                            class="form-control w-25">
+                        <br>
 
                         <hr>
                         {% if product.stock > 0 %}
@@ -40,7 +38,8 @@
                         <br />
                         
                         {% if item_exist %}
-                        <a href="{% url 'customer:cart' %}" class="btn  btn-primary"> <span class="text">Go to
+                        <br>
+                        <a href="{% url 'customer:cart' 'list' %}" class="btn  btn-primary"> <span class="text">Go to
                                 cart</span></a>
 
                         
