--- a/seller/templates/seller/includes/sidebar.html
+++ b/seller/templates/seller/includes/sidebar.html
@@ -5,7 +5,7 @@
         <a class="list-group-item" href="{% url 'Seller:view_product' %}"> My Products </a>
         <a class="list-group-item" href="{% url 'Seller:update_stock' %}"> Update Stock </a>
         <a class="list-group-item" href="{% url 'Seller:profile' %}"> Profile </a>
-        <a class="list-group-item" href="{% url 'Seller:view_orders' %}"> My orders </a>
+        <a class="list-group-item" href="{% url 'Seller:recent_orders' %}"> My orders </a>
         <a class="list-group-item" href="{% url 'Seller:order_history' %}"> Order history </a>
     </ul>
     <br>
