--- a/seller/templates/seller/add_product.html
+++ b/seller/templates/seller/add_product.html
@@ -60,19 +60,20 @@
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary btn-block"> Add product </button>
                     </div> <!-- form-group// -->
-                    {{ message }}
+
+                    {% if message %}
+                   <script>
+                          Swal.fire('{{ message }}')
+                   </script>
+                   {% endif %}
                 </form>
             </article><!-- card-body.// -->
         </div> <!-- card .// -->
         
-        <br><br>
-        <!-- ============================ COMPONENT REGISTER  END.// ================================= -->
-
+        <br><br> 
 
     </section>
-    <!-- ========================= SECTION CONTENT END// ========================= -->
-
-
+  
 </main>
 
 
