--- a/seller/templates/seller/includes/navbar.html
+++ b/seller/templates/seller/includes/navbar.html
@@ -26,7 +26,7 @@
     <div class="row align-items-center">
         <div class="col-lg-2 col-md-3 col-6">
             <a href="./" class="brand-wrap">
-                <img class="logo" src="{% static './images/logo.png' %}">
+                <img class="logo" src="{% static './images/logo.png' %}" height="120px" width="90px">
             </a> <!-- brand-wrap.// -->
         </div>   
         <div class="col-lg-6 col-md-7 col-4">
