--- a/customer/templates/customer/base.html
+++ b/customer/templates/customer/base.html
@@ -12,12 +12,16 @@
 {% block header %}
 
 {% endblock %}
+
+
 <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
 
-<!-- jQuery -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 <script src="{% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
 <!-- Bootstrap4 files-->
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
 <script src="{% static 'js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
 <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css"/>
 
@@ -46,9 +50,12 @@ $(document).ready(function() {
 <body>
    <!-- navbar -->
    {% include 'customer/includes/navbar.html' %}
-    {% block content%}
+    <div style="min-height: 500px;">
+        {% block content%}
 
     {% endblock %}
+    </div>
+
 
     <!-- footer -->
     {% include 'customer/includes/footer.html' %}
