--- a/customer/templates/customer/product_detail.html
+++ b/customer/templates/customer/product_detail.html
@@ -26,29 +26,43 @@
                             <var class="price h5">RS {{ product.price }}</var>
                         </div>
 
-                        <p> {{ product.description }}</p>
 
 
                         <hr>
+
+
+                        <div class="d-flex  my-2">
+                            <span class="count ml-2 bg-success badge badge-light text-white mr-2"
+                                style="width: 48px; font-size: 15px;">{{ product.rating }}
+                                <span> ★</span></span>
+                            <span>{{ review_count }} Review{{ review_count | pluralize }}</span>
+
+
+
+
+                        </div>
+
                         <br>
 
+                        <p>Description: {{ product.description }}</p>
                         <hr>
+                        <p>Seller: suvarna</p>
                         {% if product.stock > 0 %}
                         Stock : <span class="text-success">Available</span>
                         <br />
-                        
+
                         {% if item_exist %}
                         <br>
                         <a href="{% url 'customer:cart' 'list' %}" class="btn  btn-primary"> <span class="text">Go to
                                 cart</span></a>
 
-                        
+
                         {% else %}
                         <form action="" method="POST">
                             {% csrf_token %}
-                            <input type="submit" value="Add to Cart" class="btn  btn-primary"  >
+                            <input type="submit" value="Add to Cart" class="btn  btn-primary">
                         </form>
-                        
+
                         {% endif %}
 
                         {% else %}
@@ -67,27 +81,186 @@
         <div class="row">
             <div class="col-md-9">
 
-                <header class="section-heading">
-                    <h3>Customer Reviews </h3>
+                <div class="d-flex justify-content-around">
+                    <header class="section-heading">
+                        <h3>Customer Reviews </h3>
 
-                </header>
+                    </header>
+                    {% if already_reviewed %}
+                    <p><a class="btn btn-info mt-2" href="{% url 'customer:add_product_qstn' product.id %}">Post your
+                            Questions</a></p>
+
+
+                    {% else %}
+                    <p><a class="btn btn-info mt-2" href="{% url 'customer:product_review' product.id %}">Rate this
+                            product</a></p>
+
+
+                    {% endif %}
+                </div>
+                <div class="rating-review  d-flex ">
+
+                    <div class="d-flex  flex-column">
+
+                        <h2>{{ product.rating }} ★</h2>
+
+                        <div class="d-flex flex-column my-2">
+
+                            <span>{{ review_count }} Review{{ review_count | pluralize }}</span>
+
+
+                        </div>
+                    </div>
+
+                    <div class="ml-5">
+
+
+                        <ul class="list-unstyled">
+
+
+
+
+
+
+                            {% for rating in rating_list %}
+
+                            <li>{{rating.rating}}★ <span class="ml-2"> <progress value="{{rating.percentage}}"
+                                        max="100"></progress></span> {{ rating.count }} </li>
+                            {% endfor %}
+                        </ul>
+
+                    </div>
+                </div>
 
                 <article class="box mb-3">
-                    <div class="icontext w-100">
-                        <img src="{% static './images/avatars/avatar1.jpg' %}" class="img-xs icon rounded-circle">
+
+                    {% for review in reviews %}
+                    <div class="icontext w-100 mt-2">
+
                         <div class="text">
-                            <span class="date text-muted float-md-right">24.04.2020 </span>
-                            <h6 class="mb-1">Mike John </h6>
+
+                            <div class="d-flex">
+                                <h6 class="mb-1 ml-2">{{ review.title | title}}</h6>
+                                <span class="count ml-2 bg-success badge badge-light text-white mr-2"
+                                    style="width: 48px; font-size: 15px;">4.1<span> ★</span></span>
+
+                            </div>
+
 
                         </div>
                     </div> <!-- icontext.// -->
                     <div class="mt-3">
                         <p>
-                            Dummy comment Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip
+                            This product is very super ,and i like bass and smooth sound. it's worth for this price.its
+                            very comfortable .and battery also super.
                         </p>
                     </div>
+                    <div class="review-img">
+                        <img src="{% static './images/avatars/avatar1.jpg' %}" style="height: 100px;">
+                        <img src="{% static './images/avatars/avatar1.jpg' %}" style="height: 100px;">
+
+                    </div>
+
+
+                    <div style=" margin-top: 8px;font-size: 12px;
+                    color: #878787;
+                    margin-right: 8px;">
+                        <span class="text-muted p-2">Mohammed Rifad</span>
+                        <svg width="14" height="14" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"
+                            class="_2a1p_T">
+                            <g>
+                                <circle cx="6" cy="6" r="6" fill="#878787"></circle>
+                                <path stroke="#FFF" stroke-width="1.5" d="M3 6l2 2 4-4" fill="#878787"></path>
+                            </g>
+                        </svg>
+
+                        <span style="font-size: 10px;">Cetified user</span>
+                        <span class="ml-2">
+                            Jul, 2022</span>
+                    </div>
+
+                    {% endfor %}
+                </article>
+
+
+                <article class="box mb-3">
+                    <div>
+                        <h4 class="mb-1 ml-2">Questions And Answers</h4>
+                    </div>
+
+                    {% for question in questions %}
+
+                    <div class="mb-3">
+
+
+                        <hr>
+                        <div>
+                           
+                            <h6 class="mt-2">Q: <span>is it good?</span></h6>
+ 
+
+                            {% if question.answers_set.all|length > 1 %}
+                            
+                            <b class="mt-1 d-block">   {% if question.answers_set.all|length > 0 %}A: {{ question.answers_set.all.0.answer}} </b> {% endif %}
+                            <div>
+                                <div style=" margin-top: 8px;font-size: 12px;
+                            color: #878787;
+                            margin-right: 8px;">
+                                    <span class="text-muted p-2">{{question.answers_set.all.0.customer.first_name }}</span>
+                                    <svg width="14" height="14" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"
+                                        class="_2a1p_T">
+                                        <g>
+                                            <circle cx="6" cy="6" r="6" fill="#878787"></circle>
+                                            <path stroke="#FFF" stroke-width="1.5" d="M3 6l2 2 4-4" fill="#878787"></path>
+                                        </g>
+                                    </svg>
+    
+                                    <span style="font-size: 10px;">Cetified user</span>
+                                    <br>
+                                  
+                                </div>
+    
+    
+                            </div>
+                            <a href="">View all answers</a>
+
+
+                            {% else %}
+                            <b class="mt-1 d-block">   {% if question.answers_set.all|length > 0 %}A: {{ question.answers_set.all.0.answer}} </b> 
+
+                            <div>
+                                <div style=" margin-top: 8px;font-size: 12px;
+                            color: #878787;
+                            margin-right: 8px;">
+                                    <span class="text-muted p-2">{{question.answers_set.all.0.customer.first_name }}</span>
+                                    <svg width="14" height="14" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"
+                                        class="_2a1p_T">
+                                        <g>
+                                            <circle cx="6" cy="6" r="6" fill="#878787"></circle>
+                                            <path stroke="#FFF" stroke-width="1.5" d="M3 6l2 2 4-4" fill="#878787"></path>
+                                        </g>
+                                    </svg>
+    
+                                    <span style="font-size: 10px;">Cetified user</span>
+                                    <br>
+                                  
+                                </div>
+    
+    
+                            </div>
+                            {% endif %}
+                            {% endif %}
+                            <hr>
+                        </div>
+
+
+                         
+                    </div>
+
+                     {% endfor %}
+
+
+
                 </article>
 
 
