--- a/seller/templates/seller/seller_home.html
+++ b/seller/templates/seller/seller_home.html
@@ -16,9 +16,9 @@
           <div class="card-body">
             <h3 class="card-title">Products</h3>
             <div class="number" >
-              <b>47</b>
+              <b>{{ product_count }}</b>
             </div>                          
-            <a href="#" class="btn btn-info">View</a>
+            
             
           </div>
         </div>
@@ -26,9 +26,9 @@
           <div class="card-body">
             <h3 class="card-title">Orders</h3>
             <div class="number" >
-              <b>5</b>
+              <b>{{ orders }}</b>
             </div>                          
-            <a href="#" class="btn btn-info">View</a>
+             
             
           </div>
         </div>
