--- a/customer/templates/customer/includes/navbar.html
+++ b/customer/templates/customer/includes/navbar.html
@@ -59,8 +59,8 @@
                       </button>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="{% url 'customer:profile' %}">My Profile</a></li>
-                        <li><a class="dropdown-item" href="#">Orders</a></li>
-                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                        <li><a class="dropdown-item" href="{% url 'customer:my_orders' %}">Orders</a></li>
+                        <li><a class="dropdown-item" href="{% url 'customer:logout' %}">Logout</a></li>
                       </ul>
                     </div>
                 </div>
@@ -82,6 +82,7 @@
 
                             {% else %}
                             <small class="title text-muted">Welcome {{ request.session.customer_name }}!</small>
+                           
                             {% endif %}
                         </div>
                         <a href="{% url 'customer:cart' 'list' %}" class="widget-header pl-3 ml-3">
