--- a/customer/templates/customer/product_detail.html
+++ b/customer/templates/customer/product_detail.html
@@ -79,7 +79,7 @@
         <br>
 
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-12">
 
                 <div class="d-flex justify-content-around">
                     <header class="section-heading">
@@ -140,24 +140,24 @@
                         <div class="text">
 
                             <div class="d-flex">
-                                <h6 class="mb-1 ml-2">{{ review.title | title}}</h6>
+                                <h6 class="mb-1 ml-2 ">{{ review.title | title}}</h6>
                                 <span class="count ml-2 bg-success badge badge-light text-white mr-2"
-                                    style="width: 48px; font-size: 15px;">4.1<span> ★</span></span>
+                                    style="width: 48px; font-size: 15px;">{{ review.rating }}<span> ★</span></span>
 
                             </div>
 
 
                         </div>
                     </div> <!-- icontext.// -->
-                    <div class="mt-3">
+                    <div class="my-2">
                         <p>
-                            This product is very super ,and i like bass and smooth sound. it's worth for this price.its
-                            very comfortable .and battery also super.
+                            {{ review.review }}
                         </p>
                     </div>
                     <div class="review-img">
-                        <img src="{% static './images/avatars/avatar1.jpg' %}" style="height: 100px;">
-                        <img src="{% static './images/avatars/avatar1.jpg' %}" style="height: 100px;">
+                        {% for product_image in review.reviewimage_set.all %}
+                        <img src="{{ product_image.image.url }}" style="height: 100px;">
+                        {% endfor %}
 
                     </div>
 
@@ -165,7 +165,7 @@
                     <div style=" margin-top: 8px;font-size: 12px;
                     color: #878787;
                     margin-right: 8px;">
-                        <span class="text-muted p-2">Mohammed Rifad</span>
+                        <span class="text-muted p-2">{{ review.customer.first_name | title }}</span>
                         <svg width="14" height="14" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"
                             class="_2a1p_T">
                             <g>
@@ -175,11 +175,11 @@
                         </svg>
 
                         <span style="font-size: 10px;">Cetified user</span>
-                        <span class="ml-2">
-                            Jul, 2022</span>
-                    </div>
 
+                    </div>
+                    <hr>
                     {% endfor %}
+
                 </article>
 
 
@@ -195,58 +195,88 @@
 
                         <hr>
                         <div>
-                           
-                            <h6 class="mt-2">Q: <span>is it good?</span></h6>
- 
+
+                            <h6 class="mt-2">Q: <span>{{ question.question }}</span></h6>
+
 
                             {% if question.answers_set.all|length > 1 %}
-                            
-                            <b class="mt-1 d-block">   {% if question.answers_set.all|length > 0 %}A: {{ question.answers_set.all.0.answer}} </b> {% endif %}
-                            <div>
-                                <div style=" margin-top: 8px;font-size: 12px;
+                            <div id="answerDiv">
+                                <b class="mt-1 d-block"> 
+                                    {% if question.answers_set.all|length > 0 %}A:
+                                    {{question.answers_set.all.0.answer}} </b> {% endif %}
+                                    <span
+                                    class="text-muted p-2" style="font-size: 15px;">{{question.answers_set.all.0.customer.first_name}}</span>
+                                    <div style=" display: inline; margin-top: 8px;font-size: 12px;
                             color: #878787;
                             margin-right: 8px;">
-                                    <span class="text-muted p-2">{{question.answers_set.all.0.customer.first_name }}</span>
-                                    <svg width="14" height="14" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"
-                                        class="_2a1p_T">
+                                        
+                                      <span>
+                                        <svg width="14" height="14" viewBox="0 0 12 12"
+                                        xmlns="http://www.w3.org/2000/svg" class="_2a1p_T">
                                         <g>
                                             <circle cx="6" cy="6" r="6" fill="#878787"></circle>
-                                            <path stroke="#FFF" stroke-width="1.5" d="M3 6l2 2 4-4" fill="#878787"></path>
+                                            <path stroke="#FFF" stroke-width="1.5" d="M3 6l2 2 4-4" fill="#878787">
+                                            </path>
                                         </g>
                                     </svg>
-    
-                                    <span style="font-size: 10px;">Cetified user</span>
-                                    <br>
-                                  
-                                </div>
-    
-    
+                                      </span>
+
+                                        <span style="font-size: 10px;">Cetified user</span>
+                                        <br>
+
+                                    </div>
+
+
+                                
                             </div>
-                            <a href="">View all answers</a>
+
+                            <a href="" data-bs-toggle="modal" data-qstn="{{ question.id }}"
+                                data-answerSet="{{ question.answers_set.all }}" id="modalLink"
+                                data-bs-target="#faqModal">View all Answers</a>
+                            <div class="modal fade" id="faqModal"   tabindex="-1" aria-labelledby="exampleModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog" style="max-width: 800px;">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title bold" id="selectedQstnText">Q: Is it good?</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">x</button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div id="answerDivModal">
+
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
 
 
                             {% else %}
-                            <b class="mt-1 d-block">   {% if question.answers_set.all|length > 0 %}A: {{ question.answers_set.all.0.answer}} </b> 
+                            <b class="mt-1 d-block"> {% if question.answers_set.all|length > 0 %}A:
+                                {{question.answers_set.all.0.answer}} </b>
 
                             <div>
                                 <div style=" margin-top: 8px;font-size: 12px;
                             color: #878787;
                             margin-right: 8px;">
-                                    <span class="text-muted p-2">{{question.answers_set.all.0.customer.first_name }}</span>
+                                    <span
+                                        class="text-muted p-2">{{question.answers_set.all.0.customer.first_name}}</span>
                                     <svg width="14" height="14" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"
                                         class="_2a1p_T">
                                         <g>
                                             <circle cx="6" cy="6" r="6" fill="#878787"></circle>
-                                            <path stroke="#FFF" stroke-width="1.5" d="M3 6l2 2 4-4" fill="#878787"></path>
+                                            <path stroke="#FFF" stroke-width="1.5" d="M3 6l2 2 4-4" fill="#878787">
+                                            </path>
                                         </g>
                                     </svg>
-    
+
                                     <span style="font-size: 10px;">Cetified user</span>
                                     <br>
-                                  
+
                                 </div>
-    
-    
+
+
                             </div>
                             {% endif %}
                             {% endif %}
@@ -254,10 +284,10 @@
                         </div>
 
 
-                         
+
                     </div>
 
-                     {% endfor %}
+                    {% endfor %}
 
 
 
@@ -265,12 +295,53 @@
 
 
 
-            </div> <!-- col.// -->
-        </div> <!-- row.// -->
+            </div>
+        </div>
 
 
-    </div> <!-- container .//  -->
+    </div>
 </section>
-<!-- ========================= SECTION CONTENT END// ========================= -->
+
+<script>
+    $('#modalLink').click(function () {
+        let selectedQstn = $(this).attr('data-qstn')
+
+
+        console.log(selectedQstn);
+
+        $.ajax({
+            url: "{% url 'customer:display_qstn_details' %}",
+            method: 'GET',
+            data: {
+                qstnId: selectedQstn
+            },
+
+            success: function (response) {
+
+                var answerSet = response.data
+
+
+                for (let i of answerSet) {
+               
+                    var answerDiv = document.getElementById('answerDiv')
+                    var modalBody = document.getElementById('answerDivModal')
+                    let cloneDiv = answerDiv.cloneNode(true)
+                    console.log(cloneDiv);
+                     
+                    modalBody.appendChild(cloneDiv)
+                    cloneDiv.children[0].innerHTML = 'A: ' + i.answer   
+                    cloneDiv.children[1].innerHTML = i.customer   
+                    
+                }
+
+                console.log(answerSet);
+            }
+        })
+
+
+
+
+    })
+</script>
 
 {% endblock %}
