--- a/seller/templates/seller/base.html
+++ b/seller/templates/seller/base.html
@@ -54,7 +54,7 @@ $(document).ready(function() {
     .flex-card{
         display: flex;
         flex-direction: column;
-        background-color: rgb(20, 93, 230);
+        background-color: rgba(231, 204, 65, 0.9);
         padding: 20px;
         margin:10px;
         justify-content: center;
@@ -77,7 +77,7 @@ $(document).ready(function() {
 
 
    <!-- ========================= SECTION CONTENT ========================= -->
-<section class="section-conten padding-y bg">
+<section class="section-conten padding-y bg" style="min-height: 560px;">
 
     <div class="container">
         <div class="row">
