--- a/seller/templates/seller/includes/navbar.html
+++ b/seller/templates/seller/includes/navbar.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="col-lg-4 col-md-2 col-2">
-           Welcome,  {{ request.session.seller_name }}
+          <span> Welcome,  {{ request.session.seller_name }}</span>
             
         </div>
     
