--- a/seller/templates/seller/includes/sidebar.html
+++ b/seller/templates/seller/includes/sidebar.html
@@ -1,15 +1,17 @@
 <aside class="col-md-3">
     <!--   SIDEBAR   -->
     <ul class="list-group">
-        <a class="list-group-item active" href="{% url 'Seller:add_product' %}"> Add Products </a>
+        <a class="list-group-item" style="background-color: rgba(231, 204, 65, 0.9);" href="{% url 'Seller:add_product' %}"> Add Products </a>
         <a class="list-group-item" href="{% url 'Seller:view_product' %}"> My Products </a>
         <a class="list-group-item" href="{% url 'Seller:update_stock' %}"> Update Stock </a>
         <a class="list-group-item" href="{% url 'Seller:profile' %}"> Profile </a>
+        <a class="list-group-item" href="{% url 'Seller:change_password' %}"> Change Password </a>
+
         <a class="list-group-item" href="{% url 'Seller:recent_orders' %}"> My orders </a>
-        <a class="list-group-item" href="{% url 'Seller:order_history' %}"> Order history </a>
+ 
     </ul>
     <br>
-    <a class="btn btn-light btn-block" href="#"> <i class="fa fa-power-off"></i> <span class="text">Log
+    <a class="btn btn-light btn-block" href="#"> <i class="fa fa-power-off text-danger"></i> <span class="text">Log
             out</span> </a>
     <!--   SIDEBAR .//END   -->
 </aside>
